src/assets/css/Base/Card.css
@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
@import '../variables.scss';

.character-details.card::before {
    content: var(--cat-corner);
    position: absolute;
    top: -2%;
    z-index: 99999;
}
.fiction-globale-container .card-body::before{
    content: var(--feather-01);
    background-image: var(--feather-01);
    background-repeat: no-repeat;
    position: absolute;
    top: 16%;
    left: 90%;
    z-index: 99999;
}
.card-quest-by-id-container .card-body{
    margin: -2vh 0 1vh 4vh;
}
#original-characters-list .card-character-container{
    margin: 0vh 4vh 4vh 0;
}
#all-characters-container-card .character-card.card {
    margin: 1vh 3vh 0 3vh;
    padding: 0 1vh 1vh 1vh;
}
.display-flex-row.card-group.clan-group .card.location-clan-background-width-container::before {
    left: 66%;
    top: -2rem;
}
.display-flex-row.card-group.clan-group .character-card.card::before {
    top: -1rem;
    left: -20%;
    transform: scale(.5);
}
/* Character Details */
.clan-group {
    background: none;
    border: none;
}
#existing-character .character-details .card{
    background: none;
    border: none;
}
.clan-card {
    margin: 0.75rem 0 0 1rem;
}
.card-image-layout {
    margin: 1vh 0 0 2vh;
}
.clans-location-container {
    margin: 0 auto;
}
.character-card.card .card-image {
    margin: 0.75rem 0 0 0;
}
.character-container h3 {
    font-variant: small-caps;
}
.card.card-image-layout.clan-detail-layout.mb-3 {
    background: none;
    border: none;
}
.card.card-image-layout.clan-detail-layout.mb-3 .card-image-layout {
    margin: 4rem 0 0 3rem;
}
/* USER */
.dashboard-home-max-card-container .avatar-container {
    margin-top: -1.5rem;
}
.character-details .col-md-4 {
    padding-top: 3vh;
}
.fiction-card .card-header {
    font-size: 1.5em;
    z-index: 9999;
    font-variant: small-caps;
}
.card-group.clan-group .card, .avatar-gamer, 
.summary-container, .row.bottom-dashboard-levele-one-level-two {
    margin: 1rem;
}
#quest-by-id .quest-by-id-card.card.quest-by-id-card.background-color-main-lineart{
    margin: 1vh 0 1vh 0;
}
.my-oc-character-container{
    margin: 0 0.5rem;
}
.list-all-fictions-globale--container.three-last-chapters-container{
    margin: -1vh 0 1vh 0;
}
.last-chapter-text-link{
    line-height: 1.5;
}
li.quest-container {
    margin: 0 0.25rem;
}
.quest--global-container {
    flex: 0;
}
.quest-image-container, .background-image-quest-image-container {
    background-position: 50% 55%;
    vertical-align: top;
}
.background-image-quest{
    background-position: 50% 45%;
    aspect-ratio: 3 / 4;
    object-fit: cover;
}
.quest-details {
    margin-top: 20px;
}
.reward-message {
    color: rgba(var(--main-green), 1);
    font-weight: bold;
    margin-top: 20px;
}
.buttons-container{
    margin: 0.25rem;
}
.card-image img {
    transition: transform 0.3s ease;
}
.card-image img:hover {
    transform: scale(1.05);
}
.details-infos-characters {
    padding: 0;
}
.details-infos-group {
    border-radius: 0 0 12vh 12vh;
}
.card-title {
    font-size: 1.5em;
    margin-bottom: 0.5em;
}
#group-details p.card-title{
    font-size: 0.85em;
    margin-bottom: 0.5em;
}
.all-characters-by-user-container .card-title, .information-character-container p{
    color: rgba(var(--main-white), 1)
}
.card-text {
    font-size: 1.2em;
    line-height: 1.6;
}
#original-characters-list .card-group {
    flex-flow: row wrap;
}
.card-body.user-info-text{
    padding: 0;
}
/* SPECIFIC */
#original-characters-list .border-card-color,
#original-characters-list .card.individual-character-card{
    aspect-ratio: 1;
    transform: scale(0.95);
}
.row.btn-create-character{
    margin:0;
}
.card-text{
    padding: 1.5rem;
}
.clan-detail-card > .col-2{
    margin: 0 2rem;
}
.fiction-globale-container ul{
    margin: 0 0 1rem 0;
    height: 70vh;
}
.row.top-dashboard .all-my-oc-card .card-body > div{
    margin: 9vh 0 0 0;
}
.summaray-title-text p{
    margin: 0.5vh 0;
    line-height: 1;
    text-align: left;
}
.my-oc-card .card-body{
    padding: 0;
}
.title-container-card{
    margin: -0.5rem 0 0 0;
}
.fiction-summary-card .col-8{
    padding: 0.5rem;
}
.height-all-fictions-container .col{
    margin: 0;
}
.last-chapter-card.card-body{
    margin: 0;
}
.card-body.last-chapter-card.new-current-arc-container{
    margin: 2vh auto;
}
.clan-detail-layout .card-body .text-align-justify.poppins-text{
    overflow-y: scroll;
}
.card.video{
    margin: 0 0 0 1vh;
}
.card.arc-card.last-arc-container{
    margin: 0 0 0 1vh;
}
.summary-fiction-container-wrapper{
    background-color: rgba(var(--dark-green-01), 0.85);
}
.avatar-container{
    margin: -1vh 0 0 0;
}
.music-card button{
    margin: 0 1vh 0 1vh;
}
.card-body.last-chapter-card.text-white{
    align-items: center;
    padding: 2vh 0 0 6vh;
}
.quest--global-container.flex-wrap.height-18-rem{
    margin: 0 -4vh 0 -2vh;
}
.game-wrapper{
    background-size: contain;
    background-repeat: no-repeat;
    background-position: 50%;
}
.last-arc-container p{
    text-align: justify;
}
.arc-back-btn{
    margin: 0 0 0 -10vh;
}
#edit-chapter-contain .card-body{    
    padding: 4vh 10vh;
}
.avatar-col{
    padding: 0 0 0 23vh;
}
.image_user_grade_level{
    margin: 0 0 2vh 0;
}
.avatar-dahboard-container{
    position: absolute;
    left: 18vh;
    top: 13vh;
}
.card-img-top {
    aspect-ratio: 3 / 4;
    object-fit: cover;
    height: 20vh;
}
.header-group-container{
    background-color: rgba(var(--dark-green-01), 0.55);
    border-radius: 12vh 12vh 0 0;
    padding: 8vh 0 0 25vh;
}
.character-details-card.background-size-cover{
    border-radius: 10vh 10vh 0 0 ;
}

